--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
         git add ./data_store.json
-        git commit -m "Committing updated data store via GitHub Actions"
+        git commit -m "Committing updated data store via GitHub Actions" || echo "Nothing to push"
         git push origin main
